# image_processor

./: CMakeLists.txt  README.txt  default.profraw  image_processor.cpp  tests.cpp  tests.h
src/: application.cpp  application.h  bitmap.cpp  bitmap.h  command_line_parser.cpp  command_line_parser.h  filter_pipeline.cpp  filter_pipeline.h  filter_pipeline_maker.cpp  filter_pipeline_maker.h  image_manipulators.cpp  image_manipulators.h  lagrange_polynomial.h  matrix.h  pixel.cpp  pixel.h  poly.h  readme.md
tests/: tests.cpp  tests.h
